testsuite/tests/checks/blocks/test.out
blocks.adb:6:7: error: blocks - rule violation
6 |       declare
  |       ^^^^ 

